fix: keep header visible while scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,7 @@ body::-webkit-scrollbar {
 
 main {
   scroll-snap-type: y mandatory;
+  padding-top: calc(2rem + 32px);
 }
 
 
@@ -218,7 +219,7 @@ section {
    Header & Navigation Styles
 ---------------------------------------------- */
 header {
-  position: sticky;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
